# wordle

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  demo.webm
app/: background_color.cpp  create_keyboard.cpp  event_handler.cpp  main.cpp  popup.cpp  render_guess_word.cpp
include/wordle/: wordle.h
src/: wordle.cpp
test/: main.cpp
